# a2a-uagent

./: ARCHITECTURE_DOCUMENTATION.md  QUICK_START_GUIDE.md  README.md  requirements.txt
currency-price-agent/: test_client.py
currency-price-agent/app/: __main__.py  agent_executor.py
uagents-a2a-adapter/: README.md  pyproject.toml
uagents-a2a-adapter/examples/: perplexity_agent_example.py  test_client.py  test_currencyExchange_client.py  test_perplexity.py  test_perplexity_client.py
uagents-a2a-adapter/examples/currency-exchange-agent/: currency_uagent.py
uagents-a2a-adapter/uagents_a2a_adapter/: __init__.py  adapter.py  agentverse_agent_executor.py  main.py
uagents-a2a-adapter/uagents_a2a_adapter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
